[package]
name = "zenoh_teleop_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.12.0", default-features = false, features = [
  "attributes",
] }
futures = "0.3.24"
env_logger = "0.9.1"
zenoh = "0.6.0-beta.1"
cdr = "0.2.4"
serde = "1.0.147"
serde_derive = "1.0.147"
crossterm = "0.25.0"
